# dino-run-ce

./: .gitignore  .gitmodules  CMakeLists.txt  makefile  readme.md
src/: clouds.c  clouds.h  config.h  dino.c  dino.h  gamestate.c  gamestate.h  graphics.c  graphics.h  main.c  night.c  night.h  obstacle.c  obstacle.h  physics.c  physics.h  score.c  score.h  sound.c  sound.h  sprites.c  sprites.h  usb.c  usb.h  util.h
src/font/: dino.fnt  font.c  font.h  font.inc
src/gfx/: convimg.yaml  convpng.ini
src/lib/: steam_controller.c  steam_controller.h
